[gd_scene load_steps=37 format=3 uid="uid://b54rkfq2731tb"]

[ext_resource type="Script" uid="uid://c2myvf0kfimbs" path="res://components/3D/first_person/first_person_controller.gd" id="1_64dg2"]
[ext_resource type="Script" uid="uid://dhxxp8vvdnsqi" path="res://components/3D/first_person/motion/camera/camera_controller.gd" id="2_0rpms"]
[ext_resource type="Script" uid="uid://d4sqxm1fmt36" path="res://components/3D/first_person/motion/mouse/mouse_capture_component.gd" id="2_57c2p"]
[ext_resource type="Script" uid="uid://uydvspiq3y2j" path="res://addons/machina/src/finite-state-machine.gd" id="2_qqgk4"]
[ext_resource type="Script" uid="uid://cf7muuo28rwiv" path="res://components/3D/first_person/motion/effects/swing_head.gd" id="3_3c6vp"]
[ext_resource type="PackedScene" uid="uid://bvgu8fqmdktug" path="res://components/3D/first_person/debug_ui/debug_ui.tscn" id="3_5qxob"]
[ext_resource type="Script" uid="uid://okcsutuof7kh" path="res://ui/screen/reticles/reticle.gd" id="3_70vjd"]
[ext_resource type="Script" uid="uid://bw0ei7b0byy1u" path="res://components/3D/first_person/motion/effects/headbob.gd" id="4_6y2qc"]
[ext_resource type="Script" uid="uid://18u0t6jlxdam" path="res://ui/screen/reticles/cross_reticle.gd" id="4_iopuq"]
[ext_resource type="Script" uid="uid://ca3csjt1at40n" path="res://components/3D/first_person/motion/states/ground/idle.gd" id="4_mcspx"]
[ext_resource type="Script" uid="uid://cg2vnlgegtsxr" path="res://components/3D/first_person/motion/states/ground/walk.gd" id="5_ngxf2"]
[ext_resource type="Script" uid="uid://cxjbu4clf6ixo" path="res://components/3D/first_person/motion/states/ground/run.gd" id="6_0yq0l"]
[ext_resource type="Script" uid="uid://gyqfeyu0sql1" path="res://components/3D/first_person/motion/states/ground/crouch.gd" id="8_bl6ol"]
[ext_resource type="Script" uid="uid://dfaksd6tih04e" path="res://components/3D/first_person/motion/states/ground/dash.gd" id="9_baian"]
[ext_resource type="Script" uid="uid://dhk4drwlqjq10" path="res://components/3D/first_person/motion/states/air/fall.gd" id="9_hk4s8"]
[ext_resource type="Script" uid="uid://bvsnhh2ootmeu" path="res://components/3D/first_person/motion/states/air/jump.gd" id="10_dwvxt"]
[ext_resource type="Script" uid="uid://u0pkhqu3tipt" path="res://components/3D/first_person/motion/states/ground/slide.gd" id="10_e71sw"]
[ext_resource type="Script" uid="uid://b3kinis3rjh3m" path="res://components/3D/first_person/hands/weapons/weapon_manager.gd" id="13_jvaen"]
[ext_resource type="Script" uid="uid://fiehcpqmuwnq" path="res://components/3D/first_person/motion/states/air/wall_jump.gd" id="14_5qxob"]
[ext_resource type="Script" uid="uid://mne6ofy5lpot" path="res://components/3D/interactions/interactors/raycast_interactor_3d.gd" id="15_gtlb3"]
[ext_resource type="Script" uid="uid://b63tdtxlovti1" path="res://components/3D/first_person/motion/effects/fall_kick.gd" id="15_npdei"]
[ext_resource type="Script" uid="uid://babg67rjb1v43" path="res://components/3D/first_person/motion/effects/damage_kick.gd" id="16_8a3fm"]
[ext_resource type="Script" uid="uid://dk1dghjat6ulj" path="res://components/3D/first_person/motion/effects/screen_shake.gd" id="17_5d322"]
[ext_resource type="Script" uid="uid://dknhccbb6tfm1" path="res://components/3D/interactions/interactors/grabbable_raycast_interactor_3d.gd" id="21_a80v1"]
[ext_resource type="Script" uid="uid://cgwi3sk8o06nt" path="res://components/3D/interactions/interactors/grabber_3d.gd" id="22_5inxr"]
[ext_resource type="Script" uid="uid://bua2fjnuvxadi" path="res://components/3D/audio/footsteps/footsteps_manager_3d.gd" id="23_l1xma"]
[ext_resource type="Script" uid="uid://d4enidxhwwudp" path="res://components/3D/first_person/hands/hand.gd" id="23_vsb1p"]
[ext_resource type="Script" uid="uid://dxqeo33cxm8m3" path="res://components/3D/first_person/hands/motion/sway.gd" id="24_pve8u"]
[ext_resource type="Script" uid="uid://dvynqvoy1ptor" path="res://addons/acoustic/src/components/queue/sound_queue.gd" id="24_vsb1p"]
[ext_resource type="Script" uid="uid://duj7h576f247t" path="res://components/3D/first_person/hands/motion/bob.gd" id="25_h2ali"]
[ext_resource type="Script" uid="uid://dofqqbsamjsc0" path="res://components/3D/first_person/hands/motion/tilt.gd" id="27_xn4io"]
[ext_resource type="Script" uid="uid://bkf77a2eqaca1" path="res://components/3D/first_person/hands/motion/impulse.gd" id="28_vcol8"]
[ext_resource type="Script" uid="uid://bxa7p07im4khw" path="res://components/3D/first_person/hands/motion/recoil.gd" id="29_jvaen"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7bqjy"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ro7er"]

[sub_resource type="SphereShape3D" id="SphereShape3D_bl6ol"]

[node name="FirstPersonController" type="CharacterBody3D"]
process_mode = 1
collision_layer = 2
collision_mask = 21
script = ExtResource("1_64dg2")
headbob = false

[node name="DebugUI" type="CanvasLayer" parent="."]
layer = 2

[node name="DebugUI" parent="DebugUI" node_paths=PackedStringArray("actor") instance=ExtResource("3_5qxob")]
actor = NodePath("../..")

[node name="ReticleUI" type="CanvasLayer" parent="."]
layer = 2

[node name="CenterContainer" type="CenterContainer" parent="ReticleUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Reticle" type="Control" parent="ReticleUI/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
script = ExtResource("3_70vjd")
radius = 4.0

[node name="CrossReticle" type="Control" parent="ReticleUI/CenterContainer" node_paths=PackedStringArray("top_reticle", "bottom_reticle", "right_reticle", "left_reticle")]
visible = false
layout_mode = 2
mouse_filter = 2
script = ExtResource("4_iopuq")
top_reticle = NodePath("TopReticle")
bottom_reticle = NodePath("BottomReticle")
right_reticle = NodePath("RightReticle")
left_reticle = NodePath("LeftReticle")

[node name="TopReticle" type="Line2D" parent="ReticleUI/CenterContainer/CrossReticle"]
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="BottomReticle" type="Line2D" parent="ReticleUI/CenterContainer/CrossReticle"]
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="RightReticle" type="Line2D" parent="ReticleUI/CenterContainer/CrossReticle"]
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="LeftReticle" type="Line2D" parent="ReticleUI/CenterContainer/CrossReticle"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0

[node name="MotionStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_qqgk4")
initial_state = NodePath("Ground/IdleState")
stack_capacity = 1
metadata/_custom_type_script = "uid://uydvspiq3y2j"

[node name="Ground" type="Node" parent="MotionStateMachine"]

[node name="IdleState" type="Node" parent="MotionStateMachine/Ground" node_paths=PackedStringArray("actor")]
script = ExtResource("4_mcspx")
actor = NodePath("../../..")

[node name="WalkState" type="Node" parent="MotionStateMachine/Ground" node_paths=PackedStringArray("actor")]
script = ExtResource("5_ngxf2")
actor = NodePath("../../..")
speed = 4.0
side_speed = 3.5
acceleration = 10.0
friction = 12.0

[node name="RunState" type="Node" parent="MotionStateMachine/Ground" node_paths=PackedStringArray("actor")]
script = ExtResource("6_0yq0l")
actor = NodePath("../../..")
speed = 5.0
side_speed = 4.5
acceleration = 12.0
friction = 15.0

[node name="CrouchState" type="Node" parent="MotionStateMachine/Ground" node_paths=PackedStringArray("actor")]
script = ExtResource("8_bl6ol")
actor = NodePath("../../..")

[node name="DashState" type="Node" parent="MotionStateMachine/Ground" node_paths=PackedStringArray("actor")]
script = ExtResource("9_baian")
actor = NodePath("../../..")
gravity_force = 0.1

[node name="SlideState" type="Node" parent="MotionStateMachine/Ground" node_paths=PackedStringArray("actor")]
script = ExtResource("10_e71sw")
actor = NodePath("../../..")

[node name="Air" type="Node" parent="MotionStateMachine"]

[node name="FallState" type="Node" parent="MotionStateMachine/Air" node_paths=PackedStringArray("actor")]
script = ExtResource("9_hk4s8")
actor = NodePath("../../..")

[node name="JumpState" type="Node" parent="MotionStateMachine/Air" node_paths=PackedStringArray("actor")]
script = ExtResource("10_dwvxt")
actor = NodePath("../../..")

[node name="WallJumpState" type="Node" parent="MotionStateMachine/Air" node_paths=PackedStringArray("actor")]
script = ExtResource("14_5qxob")
actor = NodePath("../../..")
metadata/_custom_type_script = "uid://fiehcpqmuwnq"

[node name="WeaponManager" type="Node" parent="." node_paths=PackedStringArray("actor", "camera_controller", "camera_recoil_node", "right_hand", "left_hand")]
script = ExtResource("13_jvaen")
actor = NodePath("..")
camera_controller = NodePath("../Head/CameraController")
camera_recoil_node = NodePath("../Head/Eyes")
right_hand = NodePath("../Head/Eyes/Camera3D/WeaponRightHand")
left_hand = NodePath("../Head/Eyes/Camera3D/WeaponLeftHand")

[node name="BodyShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_7bqjy")

[node name="CrouchShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_ro7er")

[node name="CeilDetector" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("SphereShape3D_bl6ol")
target_position = Vector3(0, 0.5, 0)

[node name="MouseCaptureComponent" type="Node" parent="."]
script = ExtResource("2_57c2p")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="CameraController" type="Node3D" parent="Head" node_paths=PackedStringArray("actor", "camera_pivot", "camera", "mouse_capture")]
script = ExtResource("2_0rpms")
actor = NodePath("../..")
camera_pivot = NodePath("../Eyes")
camera = NodePath("../Eyes/Camera3D")
mouse_capture = NodePath("../../MouseCaptureComponent")

[node name="MotionTilt" type="Node3D" parent="Head" node_paths=PackedStringArray("actor", "camera")]
script = ExtResource("3_3c6vp")
actor = NodePath("../..")
camera = NodePath("../Eyes/Camera3D")

[node name="HeadBob" type="Node3D" parent="Head" node_paths=PackedStringArray("actor", "pivot_node")]
script = ExtResource("4_6y2qc")
actor = NodePath("../..")
pivot_node = NodePath("../Eyes")

[node name="FallKick" type="Node3D" parent="Head" node_paths=PackedStringArray("actor", "pivot_node")]
script = ExtResource("15_npdei")
actor = NodePath("../..")
pivot_node = NodePath("../Eyes")

[node name="DirectionalDamageKick" type="Node3D" parent="Head" node_paths=PackedStringArray("actor", "pivot_node")]
script = ExtResource("16_8a3fm")
actor = NodePath("../..")
pivot_node = NodePath("../Eyes")

[node name="ScreenShake" type="Node3D" parent="Head" node_paths=PackedStringArray("pivot_node")]
script = ExtResource("17_5d322")
pivot_node = NodePath("../Eyes")

[node name="Eyes" type="Node3D" parent="Head"]

[node name="Camera3D" type="Camera3D" parent="Head/Eyes"]
far = 500.0

[node name="RayCastInteractor3D" type="RayCast3D" parent="Head/Eyes/Camera3D"]
target_position = Vector3(0, 0, -3)
debug_shape_custom_color = Color(0.882353, 0.737255, 0, 1)
script = ExtResource("15_gtlb3")

[node name="GrabbableRayCastInteractor3D" type="RayCast3D" parent="Head/Eyes/Camera3D"]
target_position = Vector3(0, 0, -3)
debug_shape_custom_color = Color(0.960784, 0, 0.2, 1)
script = ExtResource("21_a80v1")

[node name="HandGrabber" type="Node3D" parent="Head/Eyes/Camera3D" node_paths=PackedStringArray("available_slots", "grabbable_interactor")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
script = ExtResource("22_5inxr")
available_slots = [NodePath("RightHandGrabber"), NodePath("LeftHandGrabber")]
grabbable_interactor = NodePath("../GrabbableRayCastInteractor3D")

[node name="RightHandGrabber" type="Marker3D" parent="Head/Eyes/Camera3D/HandGrabber"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0.1, -1.3)

[node name="LeftHandGrabber" type="Marker3D" parent="Head/Eyes/Camera3D/HandGrabber"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.1, -1.3)

[node name="WeaponRightHand" type="Node3D" parent="Head/Eyes/Camera3D" node_paths=PackedStringArray("actor", "spawn_node", "weapon_sway", "weapon_bob", "weapon_tilt", "weapon_impulse", "weapon_recoil")]
script = ExtResource("23_vsb1p")
actor = NodePath("../../../..")
spawn_node = NodePath("WeaponSway/WeaponBob/WeaponTilt/WeaponImpulse/WeaponRecoil")
weapon_sway = NodePath("WeaponSway")
weapon_bob = NodePath("WeaponSway/WeaponBob")
weapon_tilt = NodePath("WeaponSway/WeaponBob/WeaponTilt")
weapon_impulse = NodePath("WeaponSway/WeaponBob/WeaponTilt/WeaponImpulse")
weapon_recoil = NodePath("WeaponSway/WeaponBob/WeaponTilt/WeaponImpulse/WeaponRecoil")

[node name="WeaponSway" type="Node3D" parent="Head/Eyes/Camera3D/WeaponRightHand" node_paths=PackedStringArray("actor")]
script = ExtResource("24_pve8u")
actor = NodePath("../../../../..")

[node name="WeaponBob" type="Node3D" parent="Head/Eyes/Camera3D/WeaponRightHand/WeaponSway" node_paths=PackedStringArray("actor")]
script = ExtResource("25_h2ali")
actor = NodePath("../../../../../..")

[node name="WeaponTilt" type="Node3D" parent="Head/Eyes/Camera3D/WeaponRightHand/WeaponSway/WeaponBob" node_paths=PackedStringArray("actor")]
script = ExtResource("27_xn4io")
actor = NodePath("../../../../../../..")

[node name="WeaponImpulse" type="Node3D" parent="Head/Eyes/Camera3D/WeaponRightHand/WeaponSway/WeaponBob/WeaponTilt" node_paths=PackedStringArray("actor")]
script = ExtResource("28_vcol8")
actor = NodePath("../../../../../../../..")

[node name="WeaponRecoil" type="Node3D" parent="Head/Eyes/Camera3D/WeaponRightHand/WeaponSway/WeaponBob/WeaponTilt/WeaponImpulse" node_paths=PackedStringArray("actor")]
script = ExtResource("29_jvaen")
actor = NodePath("../../../../../../../../..")

[node name="WeaponLeftHand" type="Node3D" parent="Head/Eyes/Camera3D" node_paths=PackedStringArray("actor", "spawn_node", "weapon_sway", "weapon_bob", "weapon_tilt", "weapon_impulse", "weapon_recoil")]
script = ExtResource("23_vsb1p")
actor = NodePath("../../../..")
spawn_node = NodePath("WeaponSway/WeaponBob/WeaponTilt/WeaponImpulse/WeaponRecoil")
weapon_sway = NodePath("WeaponSway")
weapon_bob = NodePath("WeaponSway/WeaponBob")
weapon_tilt = NodePath("WeaponSway/WeaponBob/WeaponTilt")
weapon_impulse = NodePath("WeaponSway/WeaponBob/WeaponTilt/WeaponImpulse")
weapon_recoil = NodePath("WeaponSway/WeaponBob/WeaponTilt/WeaponImpulse/WeaponRecoil")

[node name="WeaponSway" type="Node3D" parent="Head/Eyes/Camera3D/WeaponLeftHand" node_paths=PackedStringArray("actor")]
script = ExtResource("24_pve8u")
actor = NodePath("../../../../..")

[node name="WeaponBob" type="Node3D" parent="Head/Eyes/Camera3D/WeaponLeftHand/WeaponSway" node_paths=PackedStringArray("actor")]
script = ExtResource("25_h2ali")
actor = NodePath("../../../../../..")

[node name="WeaponTilt" type="Node3D" parent="Head/Eyes/Camera3D/WeaponLeftHand/WeaponSway/WeaponBob" node_paths=PackedStringArray("actor")]
script = ExtResource("27_xn4io")
actor = NodePath("../../../../../../..")

[node name="WeaponImpulse" type="Node3D" parent="Head/Eyes/Camera3D/WeaponLeftHand/WeaponSway/WeaponBob/WeaponTilt" node_paths=PackedStringArray("actor")]
script = ExtResource("28_vcol8")
actor = NodePath("../../../../../../../..")

[node name="WeaponRecoil" type="Node3D" parent="Head/Eyes/Camera3D/WeaponLeftHand/WeaponSway/WeaponBob/WeaponTilt/WeaponImpulse" node_paths=PackedStringArray("actor")]
script = ExtResource("29_jvaen")
actor = NodePath("../../../../../../../../..")

[node name="FootstepsManager3D" type="Node3D" parent="." node_paths=PackedStringArray("floor_detector_raycast", "sound_queue")]
script = ExtResource("23_l1xma")
floor_detector_raycast = NodePath("FloorDetectorRayCast")
sound_queue = NodePath("AcousticSoundQueue")

[node name="AcousticSoundQueue" type="Node" parent="FootstepsManager3D"]
script = ExtResource("24_vsb1p")
queue_count = 5
metadata/_custom_type_script = "uid://dvynqvoy1ptor"

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="FootstepsManager3D/AcousticSoundQueue"]
max_distance = 25.0
bus = &"SFX"

[node name="FloorDetectorRayCast" type="RayCast3D" parent="FootstepsManager3D"]
target_position = Vector3(0, -0.2, 0)
debug_shape_custom_color = Color(0.160662, 0.301404, 0.742407, 1)
